--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "netlify-identity-widget",
+  "name": "@lonelypixels/netlify-identity-widget",
   "description": "Netlify Identity widget for easy integration",
-  "version": "1.9.2",
+  "version": "1.9.3",
   "author": "Matt Biilmann <matt@netlify.com>",
   "bugs": {
     "url": "https://github.com/netlify/netlify-identity-widget/issues"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
@@ -62,7 +61,10 @@
   "license": "MIT",
   "main": "./build/netlify-identity",
   "releaseVersion": "v1",
-  "repository": "netlify/netlify-identity-widget",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gonzacaminos/netlify-identity-widget"
+  },
   "scripts": {
     "build": "run-p build:*",
     "build:bundle": "cross-env NODE_ENV=production webpack --config webpack.config.babel.js",
